--- a/pages/projectConfig/projectConfig.html
+++ b/pages/projectConfig/projectConfig.html
@@ -3,11 +3,11 @@
     <div class="nav-left ">
         <ul class="nav nav-stacked nav-left-content">
             <li ui-sref="app.projectConfig.hotelList" ui-sref-active="active" class="nav-header">
-            	<a class="theme-hover">门店管理</a>
+            	<a class="theme-hover">医院管理</a>
             </li>
-            <li ui-sref="app.projectConfig.projectInfo" ui-sref-active="active" class="nav-header">
+    <!--        <li ui-sref="app.projectConfig.projectInfo" ui-sref-active="active" class="nav-header">
             	<a class="theme-hover">项目信息</a>
-            </li>
+            </li>-->
         </ul>
     </div>
     <!--左侧菜单-->
