--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <link rel="stylesheet" href="node_modules/angular-ui-bootstrap/dist/ui-bootstrap-csp.css" />
   <link rel="stylesheet" href="node_modules/angular-bootstrap-toggle/dist/angular-bootstrap-toggle.min.css" />
   <link rel="stylesheet" type="text/css" href="node_modules/angular-bootstrap-nav-tree/dist/abn_tree.css">
-  <link rel="stylesheet" href="dist/style/app.min.css" />
-  <!-- <link rel="stylesheet" href="src/style/app.css" /> -->
+  <!--<link rel="stylesheet" href="dist/style/app.min.css" />-->
+   <link rel="stylesheet" href="src/style/app.css" />
   <link rel="shortcut icon" href="dist/imgs/favicon4.ico" />
 </head>
 <body ng-app="openvod">
@@ -34,14 +34,14 @@
   <script src="node_modules/angular-bootstrap-toggle/dist/angular-bootstrap-toggle.min.js"></script>
   <script src="node_modules/angular-bootstrap-nav-tree/dist/abn_tree_directive.js"></script>
 
-  <script src="dist/js/app.min.js"></script>
+  <!--<script src="dist/js/app.min.js"></script>-->
   <script src="src/modules/app.js"></script>
-<!--     <script src="src/modules/controllers.js"></script>
+     <script src="src/modules/controllers.js"></script>
   <script src="src/modules/tv-admin-controllers.js"></script>
   <script src="src/modules/project-config-controllers.js"></script>
   <script src="src/modules/orders-controllers.js"></script>
   <script src="src/modules/directives.js"></script>
   <script src="src/modules/filters.js"></script>
-  <script src="src/modules/services.js"></script> -->
+  <script src="src/modules/services.js"></script>
 </body>
 </html>
