--- a/pages/tvAdmin.html
+++ b/pages/tvAdmin.html
@@ -177,7 +177,24 @@
             || my_tree.get_selected_branch().data.type=='SkyworthDTV'
             || my_tree.get_selected_branch().data.type=='SkyworthDTMB'
 
-            || my_tree.get_selected_branch().data.type=='BaoFengHDMI'">
+            || my_tree.get_selected_branch().data.type=='BaoFengHDMI'
+
+            || my_tree.get_selected_branch().data.type=='Hospital_Section_PersonalInfo_Nurse'
+            || my_tree.get_selected_branch().data.type=='Hospital_Section_PersonalInfo_Expert'
+            || my_tree.get_selected_branch().data.type=='Hospital_Section_Introduction'
+
+            || my_tree.get_selected_branch().data.type=='Hospital_Introduction_History'
+            || my_tree.get_selected_branch().data.type=='Hospital_Introduction_Honours'
+            || my_tree.get_selected_branch().data.type=='Hospital_Introduction_MedicalEquipment'
+            || my_tree.get_selected_branch().data.type=='Hospital_Introduction_Notes'
+
+            || my_tree.get_selected_branch().data.type=='Hospital_Food'
+
+            || my_tree.get_selected_branch().data.type=='Hospital_Guide_Around'
+            || my_tree.get_selected_branch().data.type=='Hospital_Guide_Scenic'
+            || my_tree.get_selected_branch().data.type=='Hospital_Guide_Canteen'
+            || my_tree.get_selected_branch().data.type=='Hospital_Guide_PublicArea'
+            || my_tree.get_selected_branch().data.type=='Hospital_Guide_RehabilitationDistrict'">
             <!-- 标题 -->
             <h4>{{my_tree.get_selected_branch().label}}</h4>
             <hr>
@@ -370,7 +387,24 @@
             || my_tree.get_selected_branch().data.type=='SkyworthDTV'
             || my_tree.get_selected_branch().data.type=='SkyworthDTMB'
 
-            || my_tree.get_selected_branch().data.type=='BaoFengHDMI'">
+            || my_tree.get_selected_branch().data.type=='BaoFengHDMI'
+
+            || my_tree.get_selected_branch().data.type=='Hospital_Section_PersonalInfo_Nurse'
+            || my_tree.get_selected_branch().data.type=='Hospital_Section_PersonalInfo_Expert'
+            || my_tree.get_selected_branch().data.type=='Hospital_Section_Introduction'
+
+            || my_tree.get_selected_branch().data.type=='Hospital_Introduction_History'
+            || my_tree.get_selected_branch().data.type=='Hospital_Introduction_Honours'
+            || my_tree.get_selected_branch().data.type=='Hospital_Introduction_MedicalEquipment'
+            || my_tree.get_selected_branch().data.type=='Hospital_Introduction_Notes'
+
+            || my_tree.get_selected_branch().data.type=='Hospital_Food'
+
+            || my_tree.get_selected_branch().data.type=='Hospital_Guide_Around'
+            || my_tree.get_selected_branch().data.type=='Hospital_Guide_Scenic'
+            || my_tree.get_selected_branch().data.type=='Hospital_Guide_Canteen'
+            || my_tree.get_selected_branch().data.type=='Hospital_Guide_PublicArea'
+            || my_tree.get_selected_branch().data.type=='Hospital_Guide_RehabilitationDistrict'">
             <div class="tab-pane padding-bottom-72" ng-class="{'in active':(tvAdmin.tab==1)}">
                 <ui-view></ui-view>
             </div>
