--- a/pages/roomAdd.html
+++ b/pages/roomAdd.html
@@ -1,32 +1,32 @@
 <!-- 酒店/客房管理>添加客房弹窗 -->
-<div ng-controller="roomAddController as roomAdd" ng-init="roomAdd.init();" class="autoscroll modal-dialog">
+<div ng-controller="sectionInfoAddController as sinfoAdd" ng-init="sinfoAdd.init();" class="autoscroll modal-dialog">
     <div class="modal-content">
         <!--header-->
         <div class="modal-header">
-            <button type="button" class="close" ng-click="roomAdd.cancel()">
+            <button type="button" class="close" ng-click="sinfoAdd.cancel()">
                 <span aria-hidden="true">&times;</span>
                 <span class="sr-only">Close</span>
             </button>
-            <h5 class="modal-title">{{'ROOM_ADD' | translate}}</h5>
+            <h5 class="modal-title">添加图文</h5>
         </div>
         <!--header end-->
         <!--body-->
         <div class="modal-body">
             <div ng-show="loading">loading...</div>
-            <form id="roomAddForm" name="roomAddForm" ng-submit="roomAddForm.$valid && roomAdd.save()" role="form">
+            <form id="sinfoAddForm" name="sinfoAddForm" ng-submit="sinfoAddForm.$valid && sinfoAdd.save()" role="form">
                 <!--客房名-->
                 <div class="form-group">
-                    <ng-repeat ng-repeat="lang in roomAdd.editLangs">
+                    <ng-repeat ng-repeat="lang in sinfoAdd.editLangs">
                         <div class="form-group">
                             <ng-if ng-if="lang.default">
-                                <label for="roomNameCN">客房名 {{lang.name}}：</label>
-                                <input type="text" class="form-control" id="roomNameCN" ng-model="roomAdd.room.RoomTypeName[lang.code]" required placeholder="请输入客房名（必填）" />
+                                <label for="roomNameCN">标题 {{lang.name}}：</label>
+                                <input type="text" class="form-control" id="roomNameCN" ng-model="sinfoAdd.room.RoomTypeName[lang.code]" required placeholder="请输入标题（必填）" />
                             </ng-if>
                         </div>
                         <div class="form-group">
                             <ng-if ng-if="lang.default !== true">
-                                <label for="roomNameEN">客房名 {{lang.name}}：</label>
-                                <input type="text" class="form-control" id="roomNameEN" placeholder="Enter the name" ng-model="roomAdd.room.RoomTypeName[lang.code]" />
+                                <label for="roomNameEN">标题 {{lang.name}}：</label>
+                                <input type="text" class="form-control" id="roomNameEN" placeholder="Enter the title" ng-model="sinfoAdd.room.RoomTypeName[lang.code]" />
                             </ng-if>
                         </div>
                     </ng-repeat>
@@ -39,74 +39,74 @@
                     <div class="row">
                         <div class="col-xs-12">
                             <!-- 图 -->
-                            <div ng-repeat="img in roomAdd.imgs.data" style="background-image: url({{img.src}})" class="form-thumbnail">
+                            <div ng-repeat="img in sinfoAdd.imgs.data" style="background-image: url({{img.src}})" class="form-thumbnail">
                                 <!-- 进度条 -->
                                 <div class="progress form-thumbnail-progress" ng-show="!({{img.progress}}==100)">
                                     <div class="progress-bar progress-bar-success" role="progressbar" style="width: {{img.progress}}%;">
                                     </div>
                                 </div>
                                 <!-- 关闭按钮 -->
-                                <i ng-click="roomAdd.imgs.deleteById(img.id);" class="form-thumbnail-delete icon ion-close"></i>
+                                <i ng-click="sinfoAdd.imgs.deleteById(img.id);" class="form-thumbnail-delete icon ion-close"></i>
                             </div>
                             <!-- 上传按钮 -->
-                            <div ng-click="roomAdd.clickUpload('upload')" class="form-thumbnail form-thumbnail-creat">
+                            <div ng-click="sinfoAdd.clickUpload('upload')" class="form-thumbnail form-thumbnail-creat" ng-show="sinfoAdd.imgs.data.length==0">
                                 <i class="icon ion-upload"></i> 上传图片
                                 <input id="upload" style="display: none;" type="file" file-model="myFile" data-e="hidenUpload" />
-                                <a id="hidenUpload" style="display: none;" ng-click="roomAdd.imgs.uploadFile('myFile', roomAdd.imgs)"></a>
+                                <a id="hidenUpload" style="display: none;" ng-click="sinfoAdd.imgs.uploadFile('myFile', sinfoAdd.imgs)"></a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <!--/客房图-->
                 <!--720酒店全景图地址-->
-                <div class="form-group">
+               <!-- <div class="form-group">
                     <div class="form-group">
                         <label>720酒店全景图地址（如无，请不要填任何内容）：</label>
-                        <input type="text" class="form-control" ng-model="roomAdd.room.ViewURL" />
+                        <input type="text" class="form-control" ng-model="sinfoAdd.room.ViewURL" />
                     </div>
-                </div>
+                </div>-->
                 <!--/720酒店全景图地址-->
                 <!--标签-->
-                <div class="form-group">
+               <!-- <div class="form-group">
                     <label>已选标签</label>
                     <div class="row">
                         <div class="col-xs-12">
-                            <span ng-repeat="tag in roomAdd.tags track by $index" ng-model="roomAdd.ifCheckedTags[$index].checked" uib-btn-checkbox class="tag">{{tag.TagName[roomAdd.defaultLangCode]}}</span>
+                            <span ng-repeat="tag in sinfoAdd.tags track by $index" ng-model="sinfoAdd.ifCheckedTags[$index].checked" uib-btn-checkbox class="tag">{{tag.TagName[sinfoAdd.defaultLangCode]}}</span>
                         </div>
                     </div>
-                </div>
+                </div>-->
                 <!--/标签-->
                 <div class="row">
                     <!-- 客房介绍摘要 -->
-                    <!-- <ng-repeat ng-repeat="lang in roomAdd.editLangs">
+                    <!-- <ng-repeat ng-repeat="lang in sinfoAdd.editLangs">
                         <ng-if ng-if="lang.default">
                             <div class="col-md-12 form-group">
                                 <label>客房介绍摘要 {{lang.name}}：</label>
-                                <textarea class="form-control" rows="1" ng-model="roomAdd.room.Roomsummary[lang.code]"
+                                <textarea class="form-control" rows="1" ng-model="sinfoAdd.room.Roomsummary[lang.code]"
                                           required placeholder="（必填）" maxlength="50"></textarea>
                             </div>
                         </ng-if>
                         <ng-if ng-if="lang.default !== true">
                             <div class="col-md-12 form-group">
                                 <label>客房介绍摘要 {{lang.name}}：</label>
-                                <textarea class="form-control" rows="1" ng-model="roomAdd.room.Roomsummary[lang.code]"
+                                <textarea class="form-control" rows="1" ng-model="sinfoAdd.room.Roomsummary[lang.code]"
                                           maxlength="50"></textarea>
                             </div>
                         </ng-if>
                     </ng-repeat> -->
                     <!-- /客房介绍摘要 -->
                     <!-- 客房介绍 -->
-                    <ng-repeat ng-repeat="lang in roomAdd.editLangs">
+                    <ng-repeat ng-repeat="lang in sinfoAdd.editLangs">
                         <ng-if ng-if="lang.default">
                             <div class="col-md-12 farm-group" style="margin-bottom: 20px;">
-                                <label>客房介绍 {{lang.name}}：</label>
-                                <textarea ng-trim="false" class="form-control" rows="2" ng-model="roomAdd.room.Description[lang.code]" required placeholder="（必填）"></textarea>
+                                <label>分区介绍 {{lang.name}}：</label>
+                                <textarea ng-trim="false" class="form-control" rows="2" ng-model="sinfoAdd.room.Description[lang.code]" required placeholder="（必填）"></textarea>
                             </div>
                         </ng-if>
                         <ng-if ng-if="lang.default !== true">
                             <div class="col-md-12 form-group">
-                                <label>客房介绍 {{lang.name}}：</label>
-                                <textarea ng-trim="false" class="form-control" rows="2" ng-model="roomAdd.room.Description[lang.code]"></textarea>
+                                <label>分区介绍 {{lang.name}}：</label>
+                                <textarea ng-trim="false" class="form-control" rows="2" ng-model="sinfoAdd.room.Description[lang.code]"></textarea>
                             </div>
                         </ng-if>
                     </ng-repeat>
@@ -118,10 +118,10 @@
         <!--body end-->
         <!--footer-->
         <div class="modal-footer">
-            <button type="button" class="btn btn-default btn-sm" ng-click="roomAdd.cancel()">
+            <button type="button" class="btn btn-default btn-sm" ng-click="sinfoAdd.cancel()">
                 {{'CANCEL' | translate}}
             </button>
-            <button type="submit" class="btn btn-primary btn-sm" form="roomAddForm">
+            <button type="submit" class="btn btn-primary btn-sm" form="sinfoAddForm">
                 <i class="icon ion-ios-checkmark-outline"></i> {{'SAVE' | translate}}
             </button>
         </div>
