--- a/pages/hospitalHonoursAdd.html
+++ b/pages/hospitalHonoursAdd.html
@@ -1,10 +1,57 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div ng-controller="hosHonourPicAddController as honourPicAdd" ng-init="honourPicAdd.init()" class="autoscroll modal-dialog modal-sm">
+    <div class="modal-content">
+        <!--header-->
+        <div class="modal-header">
+            <button type="button" class="close" ng-click="honourPicAdd.cancel()">
+                <span aria-hidden="true">&times;</span>
+                <span class="sr-only">Close</span>
+            </button>
+            <h5 class="modal-title">添加图片</h5>
+        </div>
+        <!--/header end-->
+        <!--body-->
+        <div class="modal-body">
+            <form id="honourPicAddForm" name="honourPicAddForm" ng-submit="honourPicAddForm.$valid && honourPicAdd.save()">
+                <div class="form-group">
+                    <!--序号-->
+                    <label>序号</label>
+                    <input class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required placeholder="（必填）""
+                    type="number" ng-model="honourPicAdd.Seq" min="1" required placeholder="（必填）"/>
+                    <!--/序号-->
+                </div>
+                <div ng-repeat="lang in honourPicAdd.editLangs track by $index" class="form-group">
+                    <!--图片-->
+                    <label>图片（{{lang.name}}）</label>
+                    <!--图片上传按钮-->
+                    <input id="upload{{$index}}" style="display: none;" type="file" file-model="myFile{{$index}}" data-e="hidenUpload{{$index}}"/>
+                    <a ng-click="honourPicAdd.clickUpload('upload'+$index)">上传</a>
+                    <a id="hidenUpload{{$index}}" style="display: none;" ng-click="honourPicAdd.uplImgs[$index].uploadFile('myFile'+$index, honourPicAdd.uplImgs[$index])"></a>
+                    <!--/图片上传按钮-->
+                    <div class="row" ng-repeat="img in honourPicAdd.uplImgs[$index].data">
+                        <div class="col-xs-12">
+                            <div class="form-thumbnail ng-scope" style="background-image: url({{img.src}})" alt="{{img.fileName}}">
+                                <!--进度条-->
+                                <div class="progress form-thumbnail-progress" ng-show="!({{img.progress}}==100)" >
+                                    <div class="progress-bar progress-bar-success" role="progressbar" style="width: {{img.progress}}%"></div>
+                                    <!-- -1代表失败 -->
+                                    <!-- 大小： {{img.fileSize}}
+                                    剩余： {{img.leftSize}} -->
+                                </div><!--/progress-->
+                            </div><!--/form-thumbnail-->
+                        </div> <!--/col-xs-12-->
+                    </div><!--/row-->
+                    <!--/图片-->
+                </div>
+
+
+            </form>
+        </div>
+        <!--/body end-->
+        <!--footer-->
+        <div class="modal-footer">
+            <button type="button" class="btn btn-default btn-sm" ng-click="honourPicAdd.cancel()">取消</button>
+            <button type="submit" class="btn btn-primary btn-sm" form="honourPicAddForm" ng-disabled="honourPicAdd.saving">保存</button>
+        </div>
+        <!--/footer end-->
+    </div>
+</div>
