--- a/pages/hotelRoom.html
+++ b/pages/hotelRoom.html
@@ -4,12 +4,12 @@
 	<!-- 左侧菜单 -->
     <div class="nav-left ">
         <ul class="nav nav-stacked nav-left-content">
-            <li class="nav-header" ng-repeat="item in hotelRoom.hotels" ui-sref-active="active" ng-init="hotelRoom.getSectionsInfo(hotelRoom.hotels[0].ID)">
-            	<a class="theme-hover" ng-click="hotelRoom.getSectionsInfo(item.ID)" >
+            <li class="nav-header" ng-repeat="item in hotelRoom.hotels" ui-sref-active="active"  >
+            	<a class="theme-hover" ng-click="hotelRoom.getSectionsInfo(item.ID)" ui-sref="app.hotelRoom.Hospital({hotelId:{{item.ID}}})">
             		{{item.Name[hotelRoom.defaultLangCode]}}
             	</a>
                 <ul  class="nav-stacked  panel-collapse" ng-if="hotelRoom.idd == item.ID" style="padding:0" >
-                    <li ng-repeat="sec in hotelRoom.seclist"  style="list-style: none" id={{sec.ID}} ui-sref-active="active" ui-sref="app.hotelRoom.section({hotelId:{{item.ID}},secId:{{sec.ID}}})" >
+                    <li ng-repeat="sec in hotelRoom.seclist"  style="list-style: none" id={{sec.ID}} ui-sref-active="active"  ng-click="hotelRoom.changeToSection(item.ID, sec.ID)">
                         <a ng-hide="true"></a>
                         <button class="btn-default" style="width: 100%;border: 0" >{{sec.Name[hotelRoom.defaultLangCode]}}</button>
                     </li>
